classes e serviços principais